app/assets/stylesheets/custom.css
/* ... */
.invoice-select-align input.select-dropdown{
    text-align: center !important;
}
#payments_form .submit_payment_form:hover {
    background-color: #09b8e2;
    color: #fff;
    border-color: #09b8e2; }
.fields-container{
    padding-bottom: 5px !important;
}
.invoice-checkbox-position{
     margin-top: -5px;
 }
#reports-breadcrumb .select-wrapper.initialized .caret{
    padding-right: 45px;
}
.time-log-table{
    padding-left: 0;
    padding-top: 0;
}
#project_task_form_popup .modal-body .left-content .form-wrapper label.placeholder-position{
    top: 0px;
}

#horizontal-project-form .content-detail .left-content .row label.placeholder-position{
    top: 0px;
}
.label-position{
    margin-top:15px;
}
.disabled-style{
    color: gainsboro;
}
.item_name_width{
    width: 12%;
}
.item_desc_width{
    width: 36%;
}
.item_unit_cost_width{
    width: 15%;
}
.item_quantity_width{
    width: 10%;
}
.item_tax_width{
    width: 12%;
}
.item_total_width{
    width: 15%;
}
.help-text{
    width: 100%;
    display: block;
    margin-left: 18px;
    font-size: 15px;
}

